# Computer-graphics

SRT/lab1/: lab1  lab1.c
artyukh_mother/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
cmake/: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  canvas.cpp  canvas.h  figure.cpp  figure.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  structure.h
lab1/Canvas/: Canvas.cpp  Canvas.h  Canvas.ui
lab1/lib/canvas/: Canvas.cpp  Canvas.h
lab1/src/: CMakeLists.txt  Line.h  direction.h  figure.cpp  figure.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1/test/: main.cpp  test.pro
lab2/lib/canvas/: Canvas.cpp  Canvas.h  Canvas.ui
lab2/src/: CMakeLists.txt  Line.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  figure.cpp  figure.h  matrix.h  vertex.cpp
lab3/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
lab3/canvas/: Canvas.cpp
lab3/geometry/: figure.cpp  figure.h  point.cpp
lab3/lib/canvas/: Canvas.cpp  Canvas.ui
lab3/math/: bezier.h  convert.h  matrix.h
lab3/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  bezier.h  matrix.h  structure.h
lab4/lib/canvas/: Canvas.cpp  Canvas.ui
lab4/src/: CMakeLists.txt  Line.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  vertex.cpp  vertex.h
lab5/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
lab6/: CMakeLists.txt  MainWindow.cpp
moduls/canvas/: Canvas.cpp  Canvas.h  Line.h  vertex.h
moduls/geometry/: array.cpp  array.h  edge.h  figure.cpp  figure.h  point.cpp  point.h
moduls/math/: bezier.h  convert.h  matrix.h
